@@ -55,6 +55,8 @@ ocaml_type_verbatim {
 option ocamlVisitor;
 // another newest astgen feature: register a (nullable) pointer type
 option pointerType StringRef;
+// yet another newest feature: add a 'a argument to all ocaml types
+option polymorphicOcamlAST;
 // use a new astgen feature: make a visitor!
 option visitor ASTVisitor;
 option dvisitor DelegatorASTVisitor;
